# IAT

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.mts
.github/workflows/: ci.yml
assets/: README.md
backend/app/: __init__.py  cli.py  config.py  database.py  factory.py  logging.py  main.py  models.py  project_implicit_assets.py  schemas.py
backend/app/routes/: api.py
backend/app/services/: __init__.py  assignment.py  definitions.py  runs.py  scoring.py  serialization.py
backend/tests/: conftest.py  test_assignment.py  test_definitions.py  test_routes.py  test_scoring.py
docs/: README.md
frontend/: index.html
frontend/src/css/: app.css
frontend/src/ts/: api.test.ts  api.ts  experiment.ts  main.ts  runner.test.ts  runner.ts  types.ts
resources/downloads/: project-implicit.yaml
resources/iats/: age-attitudes.yaml  age-gender.yaml  asian-white-american-foreign.yaml  asian-white-pleasant-unpleasant.yaml  gender-science.yaml  race-attitudes.yaml  weight-attitudes.yaml
